--- a/test/test.html
+++ b/test/test.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+      <style>
+        .h1{color: red;
+        }
+      </style>
 </head>
 <body>
     <h1>TITLE</h1>
